Avoid css overflow when code is too long

--- a/server/src/main/public/css/codemirror.css
+++ b/server/src/main/public/css/codemirror.css
@@ -2,6 +2,7 @@
     display: flex;
     flex: 1;
     padding: 0;
+    overflow-y: scroll;
 }
 
 .cm-s-evolution.CodeMirror {
