--- a/server/src/main/public/css/style.css
+++ b/server/src/main/public/css/style.css
@@ -108,6 +108,7 @@ nav .checkbox:hover {
   flex: 1;
   display: flex;
   flex-direction: column;
+  max-width: 100%;
 }
 
 .dsl-feedback {
